# cpp-sdl2-2d-grid-engine

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  script.bat
include/: GameObject.hpp  animation_controller.hpp  audio_manager.hpp  coordinate.hpp  frame.hpp  game.hpp  game_object.hpp  grid_cell.hpp  input_handler.hpp  scale.hpp  sprite.hpp  text_object.hpp  text_renderer.hpp
include/audio/: AudioManager.hpp  audio_manager.hpp
include/graphics/: TextureManager.hpp  texture_manager.hpp
include/graphics/sprite/: AnimationController.hpp  SpriteBuilder.hpp  animation.hpp  animation_controller.hpp  frame.hpp  sprite.hpp  sprite_builder.hpp
include/graphics/text/: TextObject.hpp  TextRenderer.hpp  text_object.hpp  text_renderer.hpp  text_style.hpp
include/grid/: GridCell.hpp  GridSize.hpp  grid.hpp  grid_cell.hpp
include/input/: InputHandler.hpp  input_handler.hpp
include/math/: offset.hpp
include/types/: MouseButton.hpp
src/: GameObject.cpp  animation_conroller.cpp  coordinate.cpp  frame.cpp  game.cpp  grid_cell.cpp  grid_size.cpp  input_handler.cpp  main.cpp  size.cpp  sprite.cpp  text_object.cpp  text_renderer.cpp  text_style.cpp  texture_manager.cpp
src/audio/: AudioManager.cpp  audio_manager.cpp
src/core/: game.cpp  game.hpp  input_handler.hpp  vector_2d.cpp  vector_2d.hpp
src/core/enums/: direction.hpp
src/core/managers/: audio_manager.cpp  audio_manager.hpp  manager.cpp  manager.hpp
src/entities/: game_object.cpp  game_object.hpp
src/game/: game.cpp  game.hpp  game_interface.hpp
src/graphics/: TextureManager.cpp  texture_manager.cpp
src/graphics/sprite/: AnimationController.cpp  SpriteBuilder.cpp  animation.cpp  animation_conroller.cpp  frame.cpp  sprite.cpp  sprite_builder.cpp
src/graphics/text/: TextObject.cpp  TextRenderer.cpp  TextStyle.cpp  text_object.cpp  text_renderer.cpp  text_style.cpp
src/grid/: GridCell.cpp  GridSize.cpp  grid.cpp  grid_cell.cpp  grid_size.cpp
src/input/: InputHandler.cpp  input_handler.cpp
src/math/: Vector2D.cpp  coordinate.cpp  offset.cpp  scale.cpp  size.cpp  vector_2d.cpp
src/systems/audio/: audio_manager.cpp  audio_manager.hpp
src/systems/audio/enums/: loop_mode.hpp
src/systems/common/: coordinate.cpp  coordinate.hpp  direction.hpp  offset.cpp  scale.cpp  size.cpp  size.hpp
src/systems/grid/: grid.cpp  grid.hpp  grid_cell.cpp  grid_cell.hpp
src/systems/input/: input_handler.hpp
src/systems/sprite-animation/: animation.cpp  animation.hpp  animation_conroller.cpp  animation_controller.hpp  frame.cpp  frame.hpp  sprite.cpp  sprite.hpp  sprite_builder.cpp  sprite_builder.hpp
src/systems/text/: text_renderer.cpp  text_renderer.hpp
src/systems/texture/: texture_manager.cpp  texture_manager.hpp
